--- a/index.html
+++ b/index.html
@@ -11,9 +11,39 @@
 
   <body>
 
+    <!-- SVG -->
+    <svg style="display:none">
+
+      <!-- Contact Icon -->
+      <symbol id="icon-nav-contact" viewBox="0 0 37 32">
+      <title>nav-contact</title>
+      <path d="M13.467 30c2 0.933 4.133 1.333 6.4 1.333 8.667 0 15.733-7.067 15.733-15.733-0.133-8.533-7.2-15.6-15.867-15.6s-15.6 7.067-15.6 15.733c0 2.4 0.533 4.667 1.467 6.667-0.133 0.133-5.2 6.4-3.333 8.267l0.667 0.667c2 2 10.267-1.067 10.533-1.333z"></path>
+      </symbol>
+
+      <!-- Heart Icon -->
+      <symbol id="icon-nav-heart" viewBox="0 0 37 32">
+      <title>nav-heart</title>
+      <path d="M37.333 9.467c0-3.867-3.333-9.467-9.733-9.467-6.533 0-8.933 8.8-8.933 8.8s-2.4-8.8-8.933-8.8c-6.4 0-9.733 5.6-9.733 9.467 0 2.8-0.8 4.933 5.6 11.6 2.8 2.933 7.333 5.2 13.067 10.933 5.733-5.733 10.4-8 13.067-10.8 6.4-6.667 5.6-8.933 5.6-11.733z"></path>
+      </symbol>
+
+      <!-- Location Icon -->
+      <symbol id="icon-nav-location" viewBox="0 0 32 32">
+      <title>nav-location</title>
+      <path d="M26 9.467c-0.267-5.2-4.667-9.467-9.867-9.467 0 0 0 0 0 0s0 0 0 0c-2.667 0-5.2 1.067-7.067 2.933-1.733 1.733-2.8 4-3.067 6.533 0 0.133 0 1.2 0 1.2 0.4 12.4 8.267 20 9.2 20.933 0.267 0.267 0.533 0.4 0.933 0.4 0.267 0 0.667-0.133 0.933-0.4 0.933-0.8 8.667-8.533 9.067-20.8-0.133-0.267-0.133-1.2-0.133-1.333zM12 10c0-2.267 1.733-4 4-4s4 1.733 4 4c0 2.267-1.733 4-4 4s-4-1.733-4-4z"></path>
+      </symbol>
+    </svg>
+
     <div id="container" class="clearfix">
 
       <header>
+
+        <nav>
+          <ul>
+            <li><a href="#"><svg width="14" height="14"><use xlink:href="#icon-nav-heart"/></svg>Home</a></li>
+            <li><a href="#"><svg width="14" height="14"><use xlink:href="#icon-nav-location"/></svg>Visit Us</a></li>
+            <li><a href="#"><svg width="14" height="14"><use xlink:href="#icon-nav-contact"/></svg>Contact</a></li>
+          </ul>
+        </nav>
 
         <h1>
           Pembroke Welsh Corgi
